added meadia queries to the page

--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
       <div class="inner__container">
         <div class="row">
           <div class="col1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
             vero, quia molestiae fuga quam veritatis veniam ea. Architecto,
             voluptates sint asperiores ut sapiente nisi. Tenetur adipisci
-            voluptatum porro saepe veritatis.
+            voluptatum porro saepe veritatis.</p>
           </div>
+          <br>
           <div class="col2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
             vero, quia molestiae fuga quam veritatis veniam ea. Architecto,
             voluptates sint asperiores ut sapiente nisi. Tenetur adipisci
-            voluptatum porro saepe veritatis.
+            voluptatum porro saepe veritatis.</p>
           </div>
         </div>
       </div>
